--- a/plugin.xml
+++ b/plugin.xml
@@ -1,6 +1,6 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <plugin id="cordova-plugin-bytedance-union-ad"
-        version="1.0.11"
+        version="1.0.12"
         xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android">
 
@@ -19,7 +19,7 @@
     </engines>
 
     <js-module name="BytedanceUnionAd" src="www/bytedance-union-ad.js">
-        <clobbers target="BytedanceUnionAd"/>
+        <clobbers target="cordova.plugins.BytedanceUnionAd"/>
     </js-module>
 
     <platform name="android">
